--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ PyYAML>=3.13
 sounddevice
 tensorboardX
 tensorflow
-torch==1.3.1
+torch==1.3.1+cu92
 torchvision==0.4.2
 tqdm>=4.11.2
 Unidecode>=1.0.22
