--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ sounddevice
 tensorboardX
 tensorflow
 torch==1.3.1+cu92
-torchvision==0.4.2
+torchvision==0.4.2+cu92
 tqdm>=4.11.2
 Unidecode>=1.0.22
