--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ PyYAML>=3.13
 sounddevice
 tensorboardX
 tensorflow
-torch==1.3.1+cu92
-torchvision==0.4.2+cu92
+torch==1.3.1+cu92 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.4.2+cu92 -f https://download.pytorch.org/whl/torch_stable.html
 tqdm>=4.11.2
 Unidecode>=1.0.22
